# FarmOS

./: .coderabbit.yaml  .gitignore  bootstrap-fast.cmd  bootstrap.cmd  bootstrap.py  reset-db.cmd  start-all.bat
backend/: .env.backup  .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: ai_agent.py  auth.py  diagnosis.py  health.py  journal.py  pesticide.py  review_analysis.py  subsidy.py
backend/app/core/: config.py  database.py  journal_parser.py  journal_pdf.py  journal_store.py  llm_client_base.py  pesticide_matcher.py  pesticide_sync.py  review_analyzer.py  review_rag.py  review_report.py
backend/app/models/: __init__.py  journal.py  pesticide.py
backend/app/schemas/: auth.py  journal.py  (+2 more)
backend/data/: farmos.dump
bootstrap/: _bootstrap_common.py  farmos.py  farmos_seed.py  pesticide.py  shoppingmall.py  shoppingmall_review_seed.py  shoppingmall_seed.py
docs/: backend-architecture.md  bootstrap.md  database-schema.md  dev-environment.md  dummy_shoppingmall_plan.md  iot-relay-server-plan.md  iot-review-analysis-implementation.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
shopping_mall/backend/: .env.example  CLAUDE.md  pyproject.toml
shopping_mall/backend/ai/: README.md  embeddings.py  rag.py  seed_rag.py
shopping_mall/backend/app/: database.py  main.py  paths.py
shopping_mall/backend/app/core/: config.py
shopping_mall/backend/app/models/: __init__.py  chat_log.py  product.py  shipment.py  user.py
shopping_mall/backend/app/routers/: chatbot.py  users.py
shopping_mall/backend/scripts/: README.md
(+33 files in other folders)
