[project]
name = "shopping-mall-backend"
version = "0.1.0"
description = "Shopping Mall Dummy API Server (FastAPI + SQLite)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
exclude-newer = "2026-03-26T00:00:00Z"
